Fix z-index que no iba

--- a/TP2/css/styles.css
+++ b/TP2/css/styles.css
@@ -432,7 +432,6 @@ footer div {
   background-color: #E1E1E1;
   border: none;
   cursor: pointer;
-  z-index: 1;
 }
 }
 
